[gd_scene load_steps=4 format=3 uid="uid://b3dwui2u61w78"]

[ext_resource type="Script" path="res://lp_4_1.gd" id="1_bgvr1"]
[ext_resource type="LabelSettings" uid="uid://bbdv5q0yw2mmr" path="res://Medium_Font.tres" id="2_0fyqc"]
[ext_resource type="Theme" uid="uid://cdsoq1v018kq4" path="res://Big_Font.tres" id="3_ilxmp"]

[node name="Lp_4-1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bgvr1")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 30.0
offset_right = 247.0
offset_bottom = 74.0
text = "Enter # of copies to be printed:"
label_settings = ExtResource("2_0fyqc")

[node name="LblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 86.0
offset_right = 1126.0
offset_bottom = 495.0
label_settings = ExtResource("2_0fyqc")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 618.0
offset_top = 29.0
offset_right = 870.0
offset_bottom = 83.0

[node name="BtnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 524.0
offset_right = 303.0
offset_bottom = 631.0
theme = ExtResource("3_ilxmp")
text = "Calculate"

[node name="BtnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 442.0
offset_top = 524.0
offset_right = 715.0
offset_bottom = 631.0
theme = ExtResource("3_ilxmp")
text = "Clear"

[node name="BtnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 846.0
offset_top = 524.0
offset_right = 1119.0
offset_bottom = 631.0
theme = ExtResource("3_ilxmp")
text = "Exit"

[connection signal="pressed" from="BtnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="BtnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="BtnExit" to="." method="_on_btn_exit_pressed"]
